--- a/style.css
+++ b/style.css
@@ -1,38 +1,61 @@
 .title{
-    color: black;
-    text-align: center;
+  color: black;
+  text-align: center;
 }
 
 .button {
-    /*background-color: darkblue;*/
-    color: black;
-    background-color: white;
-    border-color: white;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-    /*margin: 4px 2px;*/
-    border: white;
-    cursor: pointer;
-    border-radius: 6px;
-    /*box-shadow: 0 8px 16px 0 rgba(50,0,200,1), 0 8px 16px 0 rgba(50,0,200,1);*/
-  }
-  
-  .button:hover{
-    font-size: 20px;
-    color: green;
-    /*text-decoration-line: underline;*/
-    /*box-shadow: 0 8px 16px 0 rgba(0,0,100,1), 0 8px 16px 0 rgba(0,0,100,1)*/
-  }
+/*background-color: darkblue;*/
+color: black;
+  background-color: white;
+  border-color: white;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  /*margin: 4px 2px;*/
+  border: white;
+  cursor: pointer;
+  border-radius: 6px;
+  /*box-shadow: 0 8px 16px 0 rgba(50,0,200,1), 0 8px 16px 0 rgba(50,0,200,1);*/
+}
 
-  .login_input{
-    text-align:center;
-    position: absolute;
-    width: 100%;
-    top: 150px;
-  }
+.button:hover{
+  font-size: 20px;
+  color: green;
+  /*text-decoration-line: underline;*/
+  /*box-shadow: 0 8px 16px 0 rgba(0,0,100,1), 0 8px 16px 0 rgba(0,0,100,1)*/
+}
 
-  .login_input_element{
-    margin: 10px;
-  }
+.login_input{
+  text-align:center;
+  position: absolute;
+  width: 100%;
+  top: 150px;
+}
+
+.login_input_element{
+  margin: 10px;
+}
+
+.confirme_placeholder{
+  background-color: white;
+  position: relative;
+  text-align: center;
+  left: 46%;
+  width: 100px;
+  height: 40px;
+}
+
+.button_placehodler{
+  background-color: white;
+  position:relative;
+  text-align: center;
+  top: 20px;
+  left: 50px;
+  width: 100px;
+  height: 40px;  
+}
+
+
+
+
